--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span>!</span>
     </div>
     <div class="description">
-        <span>antes de iniciar, solo quiero recordarte que eres <br>
+        <span>antes de iniciar, solo quiero recordarte que eres
             muy especial para mí.</span><br>
     </div>
     <div class="button">
